--- a/Pay365/Pay365Wallet/Views/Account/Link_Card.cshtml
+++ b/Pay365/Pay365Wallet/Views/Account/Link_Card.cshtml
@@ -23,7 +23,7 @@
                         <div class="col-md-8">
                             <div class="card">
                                 <div class="card-title">
-                                    >@Resources.Common.lbl_linkCard
+                                    @Resources.Common.lbl_linkCard
                                 </div>
                                 <div class="card-content">
                                     <ul class="linked-cards">
