--- a/Pay365/Pay365Wallet/Views/Account/AccountInfo.cshtml
+++ b/Pay365/Pay365Wallet/Views/Account/AccountInfo.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    //ViewBag.Title = Resources.Account_info.btn_account;
+    ViewBag.Title = Resources.Common.viewbag_accountInfo;
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
