--- a/Pay365/Pay365Wallet/Views/Cashout/Cashout.cshtml
+++ b/Pay365/Pay365Wallet/Views/Cashout/Cashout.cshtml
@@ -1,4 +1,5 @@
 ﻿@{
+    ViewBag.Title = Resources.Common.viewbag_cashout;
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 @if (ViewBag.CurrentLang == "en")
