--- a/Pay365/Pay365Wallet/Views/Home/Contact.cshtml
+++ b/Pay365/Pay365Wallet/Views/Home/Contact.cshtml
@@ -34,7 +34,7 @@
                     <p>
                         <span class="contact-info">
                             <i class="material-icons">phone_iphone</i>
-                            <span><a href="tel:19006505">1900-6505</a></span>
+                            <span><a href="tel:0934626505">093-4626-505</a></span>
                         </span>
                         <span class="contact-info">
                             <i class="material-icons">link</i>
@@ -62,7 +62,7 @@
                     <p>
                         <span class="contact-info">
                             <i class="material-icons">email</i>
-                            <span><a href="mailto:hotro@pay365.vn">hotro@pay365.vn</a></span>
+                            <span><a href="mailto:pay365.hotro@gmail.com">pay365.hotro@gmail.com</a></span>
                         </span>
                     </p>
 
