--- a/Pay365/Pay365Wallet/Views/Home/Guide.cshtml
+++ b/Pay365/Pay365Wallet/Views/Home/Guide.cshtml
@@ -113,7 +113,7 @@
                                 <div class="support">
                                     <p>@Resources.Common.guide_11</p>
                                     <div class="center-align">
-                                        <a href="tel:19006505" class="btn btn-primary waves-effect waves-light">1900-6505</a>
+                                        <a href="tel:0934626505" class="btn btn-primary waves-effect waves-light">093-4626-505</a>
                                     </div>
                                 </div>
                             </div>
