--- a/Pay365/Pay365Wallet/Views/Shared/_Layout.cshtml
+++ b/Pay365/Pay365Wallet/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="300" />
     <meta property="og:image:height" content="300" />
-    <meta property="og:title" content="Ví điện tử- Cổng thanh toán điện tử Pay365" />
+    <meta property="og:title" content="@Resources.Common.viewbag_layout_title" />
     <meta property="og:description" content="Ví điện tử- Cổng thanh toán điện tử Pay365" />
     <script type="application/ld+json">
         {
@@ -29,7 +29,7 @@
         "logo": "@Html.Raw(Pay365.Utils.Config.Domain)Content/assets/images/logo-purple.svg",
         "contactPoint" : [
         { "@@type" : "ContactPoint",
-        "telephone" : "+84-19006505",
+        "telephone" : "0934626505",
         "contactType" : "customer service"
         } ]
         }
@@ -289,7 +289,7 @@
                                 <ul>
                                     <li>
                                         <i class="fa fa-phone"></i>
-                                        <span><a href="tel:18008966">1900-6505</a></span>
+                                        <span><a href="tel:0934626505">093-4626-505</a></span>
                                     </li>
                                     <li>
                                         <i class="fa fa-phone"></i>
