--- a/Pay365/Pay365Wallet/Views/Topup/TopupBank.cshtml
+++ b/Pay365/Pay365Wallet/Views/Topup/TopupBank.cshtml
@@ -1,4 +1,5 @@
 ﻿@{
+    ViewBag.Title = Resources.Common.viewbag_topup;
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 @if (ViewBag.CurrentLang == "en")
