--- a/Pay365/Pay365Wallet/Views/Shared/_Layout.cshtml
+++ b/Pay365/Pay365Wallet/Views/Shared/_Layout.cshtml
@@ -292,8 +292,8 @@
                                         <span><a href="tel:0934626505">093-4626-505</a></span>
                                     </li>
                                     <li>
-                                        <i class="fa fa-phone"></i>
-                                        <span><a href="tel:0243162160">0247-300-6505</a></span>
+                                        <i class="fa fa-envelope"></i>
+                                        <span><a href="mailto:pay365.hotro@gmail.com">pay365.hotro@gmail.com</a></span>
                                     </li>
                                     <li>
                                         <i class="fa fa-globe"></i>
