--- a/Pay365/Pay365Wallet/Views/Account/Index.cshtml
+++ b/Pay365/Pay365Wallet/Views/Account/Index.cshtml
@@ -169,9 +169,17 @@
                                         <a class='dropdown-button dropdown-input' href='javascript:;' data-activates='ddr-input-nick' style="color: #333"><i class="material-icons" style="">keyboard_arrow_down</i></a>
                                         <ul id='ddr-input-nick' class='dropdown-content'></ul>
                                     </div>
+                                    <a href="javascript:;" onclick="payment.CheckNicknameExist();" id="btnCheckNick" class="btn btn-sm btn-flat btn-secondary btn-input-right waves-effect waves-light" style="right:20px">@Resources.Payment.btnCheck</a>
                                     <input type="text" id="txtNickname" maxlength="15" placeholder="@Resources.Payment.NickName" onkeyup="utils.ChangeText(event);">
                                     <span class="error-text"></span>
                                     <span class="success-text"></span>
+                                </div>
+                            </div>
+                            <div class="form-group input-field input-dropdown" style="display:none" id="selectServerGame">
+                                <div class="icon"><i class="material-icons">desktop_windows</i></div>
+                                <div class="form-data">
+                                    <select id="ddr-select-server" onchange="payment.changeSelectServer();"></select>
+                                    <label>Server</label>
                                 </div>
                             </div>
                             <div class="form-group input-field">
