--- a/Pay365/Pay365Wallet/Views/Payment/BuyProduct.cshtml
+++ b/Pay365/Pay365Wallet/Views/Payment/BuyProduct.cshtml
@@ -16,7 +16,7 @@
             break;
         case 3:
             TitlePayment = Resources.Payment.typeview3;
-            ViewBag.Title = Resources.Payment.typeview3; 
+            ViewBag.Title = Resources.Payment.typeview3;
             break;
         case 4:
             TitlePayment = Resources.Payment.typeview4;
@@ -62,7 +62,7 @@
                                         <a href="javascript:;" onclick="payment.Vw_BuyCard(this);" data-cid="${$value.CategoryID}" class="bank-icon" title="${$value.Description}">
                                             <img src="${$value.Logo}" alt="${$value.Description}">
                                             {{if $value.DiscountRate > 0}}
-                                                <span class="badge">-${$value.DiscountRate}%</span>
+                                            <span class="badge">-${$value.DiscountRate}%</span>
                                             {{/if}}
                                             <span>${$value.Description}</span>
                                         </a>
@@ -130,7 +130,7 @@
                                         </div>
                                     }
                                     <div class="input-field input-dropdown">
-                                        
+
                                         @if (ViewBag.Id == 1)
                                         {
                                             <i class="material-icons prefix">phone_iphone</i>
@@ -148,6 +148,7 @@
                                                 <a class='dropdown-button dropdown-input' href='javascript:;' data-activates='ddr-input-nick'><i class="material-icons">keyboard_arrow_down</i></a>
                                                 <ul id='ddr-input-nick' class='dropdown-content'></ul>
                                             </div>
+                                            <a href="javascript:;" onclick="payment.CheckNicknameExist();" id="btnCheckNick" class="btn btn-sm btn-secondary btn-input-right waves-effect waves-light" style="right:30px">@Resources.Payment.btnCheck</a>
                                             <input id="txtNickname" type="text" maxlength="13" onkeyup="utils.ChangeText(event);">
                                             <label for="txtNickname">@Resources.Payment.NickName</label>
                                         }
@@ -155,30 +156,35 @@
                                         <span class="success-text"></span>
 
                                     </div>
-                                    <div class="input-field input-dropdown" id="ddl_selectAmount" style="margin-top: 1.5rem"> 
+                                    <div class="input-field input-dropdown" style="display:none" id="selectServerGame">
+                                        <i class="material-icons prefix">desktop_windows</i>
+                                        <select id="ddr-select-server" onchange="payment.changeSelectServer();"></select>
+                                        <label>Server</label>
+                                    </div>
+                                    <div class="input-field input-dropdown" id="ddl_selectAmount" style="margin-top: 1.5rem">
                                         <i class="material-icons prefix">monetization_on</i>
                                         @if (ViewBag.Id == 1)
                                         {
                                             @*<div class="input-dropdown-content">
-                                                <a class='dropdown-button dropdown-input' href='javascript:;' data-activates='ddr-input-amount'><i class="material-icons">keyboard_arrow_down</i></a>
-                                                <ul id='ddr-input-amount' class='dropdown-content'></ul>
-                                            </div>*@
+                                                    <a class='dropdown-button dropdown-input' href='javascript:;' data-activates='ddr-input-amount'><i class="material-icons">keyboard_arrow_down</i></a>
+                                                    <ul id='ddr-input-amount' class='dropdown-content'></ul>
+                                                </div>*@
                                             <select id="ddr-select-amount" onchange="payment.changeSelectAmount();">
                                                 @*<option value="" disabled selected>@Resources.Payment.String9</option>*@
                                             </select>
 
-                                            <input id="txtAmount" type="hidden" maxlength="10" onkeypress='utils.checkOnlyNumber(this, event);' onkeyup="utils.ChangeText(event); utils.formatCurrency(this, event);payment.changeAmount();">
-                                            <label for="txtAmount">@Resources.Payment.String9</label>
+                                                <input id="txtAmount" type="hidden" maxlength="10" onkeypress='utils.checkOnlyNumber(this, event);' onkeyup="utils.ChangeText(event); utils.formatCurrency(this, event);payment.changeAmount();">
+                                                <label for="txtAmount">@Resources.Payment.String9</label>
                                         }
                                         else
                                         {
                                             <select id="ddr-select-gameAmount" onchange="payment.changeSelectGameAmount(1);">
                                                 @*<option value="" disabled selected>@Resources.Payment.value6</option>*@
                                             </select>
-                                            <label for="ddr-select-gameAmount">@Resources.Payment.String9</label>
-                                            @*<span class="select-subfix">10.500 Rik</span>*@
+                                                <label for="ddr-select-gameAmount">@Resources.Payment.String9</label>
+                                                @*<span class="select-subfix">10.500 Rik</span>*@
                                         }
-                                        
+
                                         <span class="error-text"></span>
                                         <span class="success-text"></span>
                                     </div>
@@ -214,19 +220,19 @@
 
                                 }
                                 @*<div class="input-field">
-                                    <div class="row padding-left-row">
-                                        <div class="col-sm-6 left-align"><span class="label label-danger">@Resources.Payment.value8 <span id="discount">0%</span></span></div>
-                                        <div class="col-sm-6 right-align"><p><strong class="primary">@Resources.Payment.String13: <span id="totalAmount">0đ</span></strong></p></div>
-                                    </div>
-                                   
-                                </div>*@
+                                        <div class="row padding-left-row">
+                                            <div class="col-sm-6 left-align"><span class="label label-danger">@Resources.Payment.value8 <span id="discount">0%</span></span></div>
+                                            <div class="col-sm-6 right-align"><p><strong class="primary">@Resources.Payment.String13: <span id="totalAmount">0đ</span></strong></p></div>
+                                        </div>
+
+                                    </div>*@
                                 <div class="input-field">
                                     <div class="row padding-left-row">
                                         <span class="label label-danger">@Resources.Payment.value8 <span id="discount">6.2%</span></span>
                                     </div>
                                 </div>
                                 <div class="input-field">
-                                    <div class="row padding-left-row">
+                                    <div class="padding-left-row">
                                         <div class="col-sm-6">@Resources.Payment.String13: <strong class="primary" id="totalAmount">0<sup>VNĐ</sup></strong></div>
                                     </div>
                                 </div>
@@ -237,7 +243,6 @@
                                     <a href="javascript:;" tabindex="-1" onclick="payment.actionView('ts-parent', 'prev', 'View_ListItem');" class="btn btn-flat btn-primary uppercase waves-effect waves-primary"><i class="material-icons">chevron_left</i> @Resources.Payment.btn_back</a>
                                 }
                                 <a href="javascript:;" id="btnPaymentCheckInput" class="btn btn-flat btn-primary uppercase waves-effect waves-primary">@Resources.Payment.btn_next<i class="material-icons">chevron_right</i></a>
-
                             </div>
                         </div>
                     </div>
@@ -298,30 +303,30 @@
                                     <table class="table-data">
                                         <tr>
                                             <td align="left">@Resources.Payment.value1 :</td>
-                                            <td  align="right">${TransID}</td>
+                                            <td align="right">${TransID}</td>
                                         </tr>
                                         <tr>
-                                            <td  align="left">@Resources.Payment.value2 :</td>
-                                            <td  align="right">${utils.formDateTime(CreatedTime)}</td>
+                                            <td align="left">@Resources.Payment.value2 :</td>
+                                            <td align="right">${utils.formDateTime(CreatedTime)}</td>
                                         </tr>
                                         <tr>
-                                            <td  align="left">@Resources.Payment.value3 :</td>
-                                            <td  align="right">${ServiceName}</td>
+                                            <td align="left">@Resources.Payment.value3 :</td>
+                                            <td align="right">${ServiceName}</td>
                                         </tr>
                                         <tr>
-                                            <td  align="left">@Resources.Payment.value4 :</td>
-                                            <td  align="right">${ProductName}</td>
+                                            <td align="left">@Resources.Payment.value4 :</td>
+                                            <td align="right">${ProductName}</td>
                                         </tr>
                                         @*{{if RelatedUsername != ""}}
-                                        <tr id="relateAccount">
-                                            <td  align="left">@Resources.Payment.value5 :</td>
-                                            <td  align="right">${RelatedUsername}</td>
-                                        </tr>
-                                        {{/if}}*@
+                                            <tr id="relateAccount">
+                                                <td  align="left">@Resources.Payment.value5 :</td>
+                                                <td  align="right">${RelatedUsername}</td>
+                                            </tr>
+                                            {{/if}}*@
                                         {{if ProductValue > 0}}
                                         <tr id="amountPayment">
-                                            <td  align="left">@Resources.Payment.value6 :</td>
-                                            <td  align="right">${utils.formatMoney(ProductValue)}<sup>VNĐ</sup></td>
+                                            <td align="left">@Resources.Payment.value6 :</td>
+                                            <td align="right">${utils.formatMoney(ProductValue)}<sup>VNĐ</sup></td>
                                         </tr>
                                         {{/if}}
                                     </table>
@@ -329,28 +334,28 @@
                                 <div class="col-md-12">
                                     <table class="table-data">
                                         <tr>
-                                            <td  align="left">@Resources.Payment.value7 :</td>
-                                            <td  align="right">${utils.formatMoney(Amount)}<sup>VNĐ</sup></td>
+                                            <td align="left">@Resources.Payment.value7 :</td>
+                                            <td align="right">${utils.formatMoney(Amount)}<sup>VNĐ</sup></td>
                                         </tr>
                                         <tr>
-                                            <td  align="left">@Resources.Payment.value8 :</td>
-                                            <td  align="right">${Discount}%</td>
+                                            <td align="left">@Resources.Payment.value8 :</td>
+                                            <td align="right">${Discount}%</td>
                                         </tr>
                                         <tr>
-                                            <td  align="left">@Resources.Payment.value9 :</td>
-                                            <td  align="right">${utils.formatMoney(Fee)}</td>
+                                            <td align="left">@Resources.Payment.value9 :</td>
+                                            <td align="right">${utils.formatMoney(Fee)}</td>
                                         </tr>
                                         <tr>
-                                            <td  align="left">@Resources.Payment.value10 :</td>
-                                            <td  align="right">${utils.formatMoney(GrandAmount)}<sup>VNĐ</sup></td>
+                                            <td align="left">@Resources.Payment.value10 :</td>
+                                            <td align="right">${utils.formatMoney(GrandAmount)}<sup>VNĐ</sup></td>
                                         </tr>
                                         <tr>
-                                            <td  align="left">@Resources.Payment.value11 :</td>
-                                            <td  align="right">Ví điện tử Pay365</td>
+                                            <td align="left">@Resources.Payment.value11 :</td>
+                                            <td align="right">Ví điện tử Pay365</td>
                                         </tr>
                                         <tr>
-                                            <td  align="left">@Resources.Payment.value12 :</td>
-                                            <td  align="right">
+                                            <td align="left">@Resources.Payment.value12 :</td>
+                                            <td align="right">
                                                 {{if Status == 1}}
                                                 @Resources.Payment.status1
                                                 {{else Status == 0}}
@@ -456,7 +461,7 @@
                                     </thead>
                                     <tbody id="listCardTemp"></tbody>
                                 </table>
-                                
+
                                 <script id="listCardTemp_tmpl" type="text/x-jquery-tmpl">
                                     {{each listCardData}}
                                     <tr>
@@ -496,7 +501,7 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
-        
+
 
         payment.Init('@ViewBag.Id');
         $('.input-number').input_number({
@@ -505,7 +510,7 @@
                 payment.changeSelectAmount();
             }
         });
-        
+
         $("#View_PaymentConfirm").keypress(function (event) {
             if (event.which == 13) {
                 event.preventDefault();
