--- a/Pay365/Pay365Wallet/Views/Account/Index.cshtml
+++ b/Pay365/Pay365Wallet/Views/Account/Index.cshtml
@@ -424,7 +424,7 @@
                     <div class="card-button flat">
                         <a onclick="gotoLinkCard();" href="javascript:;" class="btn btn-flat btn-primary waves-effect waves-primary uppercase">
                             <i class="material-icons">credit_card</i>
-                            @Resources.Common.addCard
+                            @Resources.Common.btn_linkCard
                         </a>
                     </div>
                 </div>
