--- a/Pay365/Pay365Wallet/Views/Account/Link_Card.cshtml
+++ b/Pay365/Pay365Wallet/Views/Account/Link_Card.cshtml
@@ -497,11 +497,11 @@
                                     <table class="table-data table-sm">
                                         <tbody>
                                         <tr>
-                                            <td width="40%">Số thẻ:</td>
+                                            <td width="40%">@Resources.Account_info.lbl_cardnumber:</td>
                                             <td id="lbl_cardnumber"></td>
                                         </tr>
                                         <tr>
-                                            <td width="40%">Tên chủ thẻ</td>
+                                            <td width="40%">@Resources.Account_info.lbl_accountHolder</td>
                                             <td id="lbl_accountHolder"></td>
                                         </tr>
                                         </tbody>
