--- a/Pay365/Pay365Wallet/Views/Account/Link_Card.cshtml
+++ b/Pay365/Pay365Wallet/Views/Account/Link_Card.cshtml
@@ -51,7 +51,7 @@
                                             @*<div class="date">12/20</div>*@
                                         </div>
                                         <div class="action">
-                                            <a href="javascript:;"><i class="material-icons" data-position="bottom" data-delay="0" data-tooltip="Xem chi tiết">search</i></a>
+                                            @*<a href="javascript:;"><i class="material-icons" data-position="bottom" data-delay="0" data-tooltip="Xem chi tiết">search</i></a>*@
                                             <a href="javascript:;" onclick="linkcard.DeleteLinkCard('${ AssociateAccountID }')"><i class="material-icons" data-position="bottom" data-delay="0" data-tooltip="Hủy thẻ">clear</i></a>
                                         </div>
                                 </script>
@@ -433,7 +433,7 @@
                                 </script>
                             </div>
                             <div class="card-button">
-                                <a href="javascript:;" onclick="linkcard.back();" class="btn btn-flat btn-primary uppercase waves-effect waves-primary"><i class="material-icons">chevron_left</i> Quay lại</a>
+                                <a href="javascript:;" onclick="linkcard.back();" class="btn btn-flat btn-primary uppercase waves-effect waves-primary"><i class="material-icons">chevron_left</i> @Resources.Payment.btn_back</a>
                             </div>
                         </div>
                     </div>
