--- a/Pay365/Pay365Wallet/Views/Account/Link_Card.cshtml
+++ b/Pay365/Pay365Wallet/Views/Account/Link_Card.cshtml
@@ -391,11 +391,8 @@
                                 </div>
                                 <div class="card-content">
                                     <ul class="questions">
-                                        <li><a href="#">Hướng dẫn gắn kết thẻ</a></li>
-                                        <li><a href="#">Các loại thẻ cho phép gắn kết</a></li>
-                                        <li><a href="#">Nạp tiền qua thẻ gắn kết</a></li>
-                                        <li><a href="#">Thanh toán qua thẻ gắn kết</a></li>
-                                        <li><a href="#">Lợi ích khi gắn kết thẻ với Pay365</a></li>
+                                        <li><a href="@Html.Raw(Pay365.Utils.Config.Domain + $"huong-dan/chi-tiet?category=wallet&detail=nap-tien-qua-the-lien-ket48")">Nạp tiền qua thẻ gắn kết</a></li>
+                                        <li><a href="@Html.Raw(Pay365.Utils.Config.Domain + $"huong-dan/chi-tiet?category=wallet&detail=huong-dan-gan-ket-the47")">Hướng dẫn gắn kết thẻ</a></li>
                                     </ul>
                                 </div>
                             </div>
