--- a/Pay365/Pay365Wallet/Views/Account/Index.cshtml
+++ b/Pay365/Pay365Wallet/Views/Account/Index.cshtml
@@ -186,19 +186,8 @@
                                 <div class="icon"><i class="material-icons">monetization_on</i></div>
                                 <div class="form-data">
                                     <select id="ddr-select-gameAmount" onchange="payment.changeSelectGameAmount();">
-                                        @*<option value="" disabled selected>@Resources.Payment.value6</option>*@
-
-                                        <option value="50000" selected data-content="50.000<sup>VNĐ</sup>">50.000</option>
-                                        <option value="100000" data-content="100.000<sup>VNĐ</sup>">100.000</option>
-                                        <option value="200000" data-content="200.000<sup>VNĐ</sup>">200.000</option>
-                                        <option value="500000" data-content="500.000<sup>VNĐ</sup>">500.000</option>
-                                        <option value="1000000" data-content="1.000.000<sup>VNĐ</sup>">1.000.000</option>
-                                        <option value="2000000" data-content="2.000.000<sup>VNĐ</sup>">2.000.000</option>
-                                        <option value="5000000" data-content="5.000.000<sup>VNĐ</sup>">5.000.000</option>
-                                        <option value="10000000" data-content="10.000.000<sup>VNĐ</sup>">10.000.000</option>
-                                        <option value="20000000" data-content="20.000.000<sup>VNĐ</sup>">20.000.000</option>
+                                        <option value="" disabled selected>@Resources.Payment.value6</option>
                                     </select>
-                                    @*<span class="select-subfix">10.500 Rik</span>*@
                                     <span class="error-text"></span>
                                     <span class="success-text"></span>
                                 </div>
