--- a/Pay365/Pay365Wallet/Views/Home/Contact.cshtml
+++ b/Pay365/Pay365Wallet/Views/Home/Contact.cshtml
@@ -40,10 +40,10 @@
                             <i class="material-icons">link</i>
                             <span><a href="https://www.pay365.vn">https://www.pay365.vn</a></span>
                         </span>
-                        <span class="contact-info">
+                        @*<span class="contact-info">
                             <i class="material-icons">call</i>
                             <span><a href="tel:02473006505">(024)-73 006 505</a></span>
-                        </span>
+                        </span>*@
                     </p>
 
                     <div class="contact-caption">@Resources.Common.lbl_corperation</div>
