--- a/Pay365/Pay365Wallet/Views/Transfer/TransferMoney.cshtml
+++ b/Pay365/Pay365Wallet/Views/Transfer/TransferMoney.cshtml
@@ -162,8 +162,8 @@
                                                         <span class="data">${utils.formDateTime($value.CreatedTime)}</span>
                                                     </li>
                                                     <li>
-                                                        <span class="label">@Resources.Common.String16:</span>
-                                                        <span class="data">${$value.ServiceName}</span>
+                                                        <span class="label">@Resources.Transfer.ReceiveAcc:</span>
+                                                        <span class="data">${$value.RelatedUsername}</span>
                                                     </li>
                                                     <li>
                                                         <span class="label">@Resources.Payment.value12:</span>
